--- a/LeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -30,17 +30,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">My Leave</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Leave Management
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
-                                <a class="dropdown-item" href="#">Leave Allocations</a>
-                                <a class="dropdown-item" href="#">Leave Requests</a>
-                                <a class="dropdown-item" href="#">Employee Management</a>
-                            </div>
-                        </li>
+                        @if (User.IsInRole("Administrator"))
+                            {
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Leave Management
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
+                            <a class="dropdown-item" href="#">Leave Allocations</a>
+                            <a class="dropdown-item" href="#">Leave Requests</a>
+                            <a class="dropdown-item" href="#">Employee Management</a>
+                        </div>
+                    </li>
+                         }
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
