--- a/LeaveManagement.Web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.Web/Views/Shared/_Layout.cshtml
@@ -31,20 +31,23 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">My Leave</a>
                         </li>
                         @if (User.IsInRole("Administrator"))
-                            {
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Leave Management
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
-                            <a class="dropdown-item" href="#">Leave Allocations</a>
-                            <a class="dropdown-item" href="#">Leave Requests</a>
-                            <a class="dropdown-item" href="#">Employee Management</a>
-                        </div>
-                    </li>
-                         }
-                        
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="employees" asp-action="Index">Employees</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Leave Management
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
+                                    <a class="dropdown-item" href="#">Leave Allocations</a>
+                                    <a class="dropdown-item" href="#">Leave Requests</a>
+                                    <a class="dropdown-item" href="#">Employee Management</a>
+                                </div>
+                            </li>
+                        }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -65,6 +68,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/sweetalert/sweetalert.min.js"></script>
+    <script> 
+        $(function () {
+            $('.table').DataTable();
+        });</script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
