--- a/LeaveManagement.Web/Views/LeaveRequests/Create.cshtml
+++ b/LeaveManagement.Web/Views/LeaveRequests/Create.cshtml
@@ -37,6 +37,7 @@
             
             
             <div class="form-group">
+               <a class="btn btn-dark" asp-action="MyLeave">Cancel</a>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
